# learn-record

./: README.md
02-APUE/01-Introduction/: 01-simple-ls.c  02-uncached-io.c  03-standard-io  03-standard-io.c  04-print-getpid  04-print-getpid.c  05-process-control  05-process-control.c  06-strerr-perr  06-strerr-perr.c  07-getuid-getgid  07-getuid-getgid.c  08-signal  08-signal.c  simple-ls  simple-repeater
03-redis/: springboot-15-redis - 快捷方式.lnk
04-zlog/: dzlog_demo  test_default.conf  test_hello.conf  zlog.conf.default  zlog_demo  zlog_demo.c  zlog_demo_2
05-python/: 00.py  04-Advance-Features.py  05-Functional-Programming.py  05_01_datatype_and_variable.py  05_02_string_and_encode.py  05_03_list_and_tuple.py  05_04_condition_branch.py  06-Module.py  07-OOP-Base.py  08-OOP-Advance.py  09-Error-Debug-Test.py  10-IO.py  11-Procee-Thread.py  11-task_master.py  11-task_master.v2.py  11-task_worker.py  11-task_worker.v2.py  closeure.py  file1.txt  hello.py  mydict.py  obj.json  tmp.data  tpm  util.py
CMake/: CMakeLists.bk.txt  CMakeLists.txt  main.cpp
CMake/calc/: CMakeLists.txt  add.cpp  div.cpp  multi.cpp  sub.cpp
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step1/: .CMakeLists.txt.swp  CMakeLists.txt  tutorial.cxx
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step10/: CMakeLists.txt  tutorial.cxx
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step10/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step11/: CMakeLists.txt  Config.cmake.in
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step11/MathFunctions/: CMakeLists.txt
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/: MultiCPackConfig.cmake  Tutorial-1.0-Linux.tar.Z
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/_CPack_Packages/Linux/STGZ/: Tutorial-1.0-Linux.sh
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/_CPack_Packages/Linux/STGZ/Tutorial-1.0-Linux/lib/: libMathFunctionsd.so.1.0.0
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/_CPack_Packages/Linux/TGZ/Tutorial-1.0-Linux/lib/: libMathFunctions.so.1.0.0
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutoriald  cmake_install.cmake  install_manifest.txt  libMathFunctionsd.so.1.0.0
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/debug/MathFunctions/: Makefile  cmake_install.cmake
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake  install_manifest.txt  libMathFunctions.so.1.0.0
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step12/release/MathFunctions/: Makefile  cmake_install.cmake
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step3/: CMakeLists.txt
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step3/MathFunctions/: CMakeLists.txt
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step4/: CMakeLists.txt
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step5/: CMakeLists.txt
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step5_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake  install_manifest.txt
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step5_build/MathFunctions/: Makefile  cmake_install.cmake
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step8/MathFunctions/: CMakeLists.txt  MakeTable.cmake  mysqrt.cxx
CMake/cmake_official_tutorial/cmake-3.26.4-tutorial-source/Step9/: CMakeLists.txt
CMake/include/: calc.h  header.h  sort.h
CMake/sort/: CMakeLists.txt  insert.cpp  select.cpp
CMake/src/: add.cpp  div.cpp  multi.cpp  sub.cpp
CMake/test1/: CMakeLists.txt  calc.cpp
CMake/test2/: CMakeLists.txt  sort.cpp
CPP_MT/: CMakeLists.txt  cond_var.cpp  eg11.cpp  eg12.cpp  eg13.cpp  eg14_cond_var.cpp  eg14_mutex.cpp  eg14_unique_lock.cpp  eg14_waitfor.cpp  eg14condvar  eg8.cpp  eg9.cpp  lock_guard.cpp  lock_guard_test  multi_thread.cpp  mutex.cpp  mutex2.cpp  mutex2_test  mutex_test  myasync.cpp  mythread  mythread.cpp  sleep_until.cpp  test  unique_lock.cpp  unique_lock.test
CPP_STL/: list.cpp  test
CPP_STL/array/: array  (+1 more)
DesignPattern/: pom.xml
Golang/: 01.hello.go  03-变量.go  05-运算符.go  07-循环语句.go  08-函数.go  09-变量作用域.go  10-go-array.go  11-go-pointer.go  12-go-struct.go  13-go-slice.go  go.mod  my-go-test
Lua/: 05-运算符.lua  06-字符串.lua  07-数组.lua  08-迭代器.lua  09-table.lua  10-模块和包.lua  11-元表.lua  15-debug调试.lua  16-垃圾回收.lua  17-面向对象.lua  18-数据库访问.lua  ffi.libc  ffi.lua  find_second.lua  hello.lua  table-to-string.lua  test-key.lua  test-next.lua  test-not-nil.lua  test-obj-arrays.lua  test.lua  test_next.lua  test_pass_param.lua  test_ret_value.lua  until.lua
MyBatisPlus/: pom.xml
MySQL/: 01-procedure.sql  liaoxuefeng.sql  quick-start.sql  sql-tutorial-cn.sql  sql-tutorials-cainiao.sql  sql39.sql
NodeJS/: file-stats.js
Python/: 00.py  04-Advanced-Features.py  05-Functional-Programming.py  06-Module.py  07-OOP-Base.py  08-OOP-Advance.py  09-Error-Debug-Test.py  10-IO.py  11-task_master.py  11-task_worker.py  Closure.py  hello.py  mydict.py  obj.json  student.py  tmp.data  util.py
SSG/: package-lock.json
Shell/: add_user_from_file.sh  cmd_param.sh  file_compare.sh  multem  search_bin.sh  user.csv
Valgrind/: main.cpp  test
front-end/: HBuilder X.lnk
kafka-learn/: pom.xml
spdlog-pracitice/: basic-usages.cpp
(+2537 files in other folders)
