
cmake_minimum_required(VERSION 3.10)

project(my_thread VERSION 1.0)

# add_executable(mythread mythread.cpp)
# add_executable(myasync myasync.cpp)
# add_executable(eg8 eg8.cpp)
# add_executable(eg9 eg9.cpp)
# add_executable(eg11 eg11.cpp)
# add_executable(eg12 eg12.cpp)
# add_executable(eg13 eg13.cpp)
# add_executable(eg14cond_var eg14_cond_var.cpp)
add_executable(eg14waitfor eg14_waitfor.cpp)
add_executable(sleep_until sleep_until.cpp)